--- a/css/classes.css
+++ b/css/classes.css
@@ -49,7 +49,7 @@
   font-size: 2rem;
 }
 
-.todolists {
+.todolist {
   display: flex;
   justify-content: start;
   align-items: flex-start;
@@ -61,7 +61,7 @@
 
 }
 
-.todolists__item {
+.todolist__item {
   width: 300px;
   height: 400px;
   display: flex;
